--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "db:up": "docker-compose up -d",
+    "db:down": "docker-compose down"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "express-validator": "^6.14.0"
+    "express-validator": "^6.14.0",
+    "mongoose": "^6.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
