--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "yarn db:up && nodemon index.js",
     "db:up": "docker-compose up -d",
     "db:down": "docker-compose down"
   },
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
-    "mongoose": "^6.1.4"
+    "mongoose": "^6.1.4",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
