--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "db:down": "docker-compose down"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
