--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^6.1.4",
     "multer": "^1.4.4",
     "passport": "^0.5.2",
