--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.0.4",
     "express-validator": "^6.14.0",
     "jwt-simple": "^0.5.6",
     "mongoose": "^6.1.4",
