--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,7 @@ services:
     restart: always
     ports:
       - 27017:27017
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
