--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "db:up": "docker-compose up -d",
     "db:down": "docker-compose down",
     "redis": "docker exec -it 46cadfd1571e_twitter-clone-node_redis_1 redis-cli",
-    "mongo": "docker exec -it twitter-clone-node_mongo_1 mongo"
+    "mongo": "docker exec -it twitter-clone-node_mongo_1 mongo",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -25,6 +26,9 @@
     "redis": "^4.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "axios": "^0.24.0",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15"
   }
 }
