--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "axios": "^0.24.0",
+    "faker": "5.5.3",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15"
   }
